kubernetes_fundamentals_for_developers/02_downward_api/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: my-app
  labels:
    app: my-app
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: my-app
      image: quay.io/kubermatic-labs/kad-training:1.0.0
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
      volumeMounts:
        - name: podinfo
          mountPath: /etc/podinfo
  volumes:
    - name: podinfo
      downwardAPI:
        items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
          - path: "annotations"
            fieldRef:
              fieldPath: metadata.annotations
